# linked-list

./: CMakeLists.txt  Makefile  README.pod
src/: CMakeLists.txt  list.c  list.h  main.c  tests.cpp  tests.hpp
tests/: CMakeLists.txt  testmain.cpp  tests.cpp  tests.hpp
